--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.2",
+    "bootstrap-vue": "^2.21.2",
     "gh-pages": "^3.1.0",
     "gridsome": "^0.7.20",
     "node-sass": "^4.12.0",
