--- a/src/assets/content/data/config.json
+++ b/src/assets/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Brevifolia",
+    "title": "Martin's Mad & Vin",
     "description": "Starter blog using Forestry CMS with Gridsome.",
     "contact": {
       "email": "info@forestry.io",
@@ -9,4 +9,3 @@
     "primary_color": "#ACCAC5",
     "repository_url": "https://github.com/kendallstrautman/starter-blog-gridsome"
   }
-  
